--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "docco-husky": "./bin/generate"
   },
   "scripts": {
-    "install": "./scripts/install.sh"
+  //  "install": "./scripts/install.sh"
   },
   "devDependencies": {},
   "optionalDependencies": {}
